Add header test and styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <header>
-
+            <h1>Discover Hidden Places in the World Around You</h1>
+            <h4>Download Excursion (Coming soon!)</h4>
         </header>
         <main>
 
