Final for proof

--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
     <body>
         <header>
             <h1>Discover Hidden Places in the World Around You</h1>
-            <h4>Download Excursion (Coming soon!)</h4>
+            <a href='' class='download'>Download Excursion (Coming soon!)</a>
         </header>
         <main>
-
+            <section class='demo'>
+                <video src='resources/excursion.mp4' controls autoplay></video>
+            </section>
+            <section class='description'>
+                <h1>Your personal travel guide</h1>
+                <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+                <img src='resources/camp.webp' alt='two dome tents on a mountaintop, illuminated from within at sunset'/>
+            </section>
+            <section class='platforms'>
+                <p></p>
+                <img src='resources/phone.webp'/>
+                <h1>Coming soon for iPhone and Android</h1>
+                <a href='' class='download'>Download Excursion (Coming Soon!)</a>
+            </section>
         </main>
         <footer>
-
+            <h3>© Excursion</h3>
         </footer>
     </body>
 </html>
